--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1  
+  pdf: ^3.11.1
+  printing: ^5.13.2
+  provider:
+  badges:
 
 
   # The following adds the Cupertino Icons font to your application.
